tests/files/type_checker_tests/should_fail/205.cmdr
//Should fail when defining pre-existing variables
alias x = ls;
type x = int;
